--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   http: ^1.1.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
